<resources>
    <string name="kTabBarNameMarkets">Markets</string>
    <string name="kTabBarNameCollateral">Margin</string>
    <string name="kTabBarNameServices">Services</string>
    <string name="kTabBarNameMy">My</string>
    <string name="kLable24HVol">24HVol</string>
    <string name="kLabelMarketFavorites">Favorites</string>
    <string name="kLabelGroupNameMain">Main</string>
    <string name="kLabelGroupNameCommunity">Community</string>
    <string name="kLabelGroupNameGDEX">GDEX(Gateway)</string>
    <string name="kLabelGroupNameWWW">WWW(Gateway)</string>
    <string name="kLabelGroupNameOPEN">OPEN(Gateway)</string>
    <string name="kLabelGroupNameWIN">WIN(Gateway)</string>
    <string name="kLabelGroupNameOther">Other</string>
    <string name="kLabelGroupIntroduction">Introduction &gt;</string>
    <string name="kLabelNoFavMarket">You have not added any favorites market.</string>
    <string name="kLabelBtnNameAddPair">Add</string>
    <string name="kLabelTitleAssetQuote">Quote</string>
    <string name="kLabelTitleAssetBase">Base</string>
    <string name="kVcMyPairSubmitTipMissQuoteAsset">Please select the quote asset.</string>
    <string name="kVcMyPairSubmitTipMissBaseAsset">Please select the base asset.</string>
    <string name="kVcMyPairSubmitTipQuoteBaseIsSame">Quote asset and base asset cannot be the same.</string>
    <string name="kVcMyPairSubmitTipPairIsAlreadyExist">The pair already exists.</string>
    <string name="kDebtLableReset">Reset</string>
    <string name="kDebtLableSelectAsset">Select asset</string>
    <string name="kDebtLableFeedPrice">Feed price</string>
    <string name="kDebtLableCallPrice">Call price</string>
    <string name="kDebtLablePayMaxDebt">Pay Debt</string>
    <string name="kDebtLableUseMax">All</string>
    <string name="kDebtLableAvailable">Available</string>
    <string name="kDebtLableRatio">Ratio</string>
    <string name="kDebtLableUpdatePosition">Update position</string>
    <string name="kDebtLableLogin">Login</string>
    <string name="kDebtLabelCellTitleDebtValue">Debt</string>
    <string name="kDebtLabelCellTitleCollAmount">Margin</string>
    <string name="kDebtTipSelectDebtAsset">Please select the asset to borrow</string>
    <string name="kDebtTipInputDebtValue">Please input debt value</string>
    <string name="kDebtTipInputCollAmount">Please input collateral amount</string>
    <string name="kDebtTipPleaseInputDebtValueFirst">Please enter the debt value first.</string>
    <string name="kDebtTipPleaseAdjustRatioFirst">Please adjust the ratio first.</string>
    <string name="kDebtTipTargetRatioNotSet">Target ratio not set</string>
    <string name="kDebtTipTargetRatio">Target ratio</string>
    <string name="kDebtTipTitleFeedAndCallPrice">Feed &amp; Call price</string>
    <string name="kDebtTipTitleWhatIsRatio">What is the ratio?</string>
    <string name="kDebtTipTitleWhatIsTargetRatio">What is the target ratio?</string>
    <string name="kDebtTipNetworkErrorPleaseRefresh">The network is abnormal. Please refresh the interface again.</string>
    <string name="kDebtTipAssetHasGlobalSettled">The asset has been global settled and cannot update position.</string>
    <string name="kDebtTipAssetNoValidFeedData">The asset has no feed data and and cannot update position </string>
    <string name="kDebtTipCollRatioCannotLessThanMCR">The ratio cannot be lower than %s.</string>
    <string name="kDebtTipCannotAdjustMoreLowerRatio">You are already in a forced sale and you cannot reduce the ratio.</string>
    <string name="kDebtTipValueAndAmountNotChange">The amount of borrowings and collateral did not change.</string>
    <string name="kDebtTipCollNotEnough">The collateral balance is insufficient.</string>
    <string name="kDebtTipAvailableNotEnough">%s balance is insufficient, please adjust the amount of repayment.</string>
    <string name="kDebtTipRatioTooLow">The ratio is lower than %s and you cannot borrow more.</string>
    <string name="kDebtTipTxUpdatePositionFullOK">Update position successfully.</string>
    <string name="kDebtTipTxUpdatePositionOK">Update position successfully, but the refresh failed. Please try again later.</string>
    <string name="kDebtWarmTips">[Tips]\n1. When the feed price drops to the call price, the system will automatically sell your collateral assets for debt repayment. Please pay attention to adjusting the ratio control risks. \n2. When the debt field is locked, the ratio will change with the collateral. \n3. When the ratio field is locked, the debt will change with the collateral.</string>
    <string name="kDebtWarmTipsForPM">[Tips] \nThe current asset is a predicted market asset. The amount of borrowing and collateral is constant at 1: 1.</string>
    <string name="kServicesCellLabelQrScan">Scan QR code</string>
    <string name="kServicesCellLabelTransfer">Transfer</string>
    <string name="kServicesCellLabelAccountSearch">Account search</string>
    <string name="kServicesCellLabelRank">Rank</string>
    <string name="kServicesCellLabelVoting">Voting</string>
    <string name="kServicesCellLabelSmartCoin">Smartcoin</string>
    <string name="kServicesCellLabelFeedPrice">Feed price details</string>
    <string name="kServicesCellLabelOtcUser">OTC</string>
    <string name="kServicesCellLabelOtcMerchant">Merchant</string>
    <string name="kServicesCellLabelDepositWithdraw">Deposit &amp; Withdraw</string>
    <string name="kServicesCellLabelAdvFunction">Advanced Features</string>
    <string name="kServicesCellLabelBtsExplorer">Explorer</string>
    <string name="kVcScanPermissionNoCamera">Your camera is not detected.</string>
    <string name="kVcScanPermissionSystemLimit">The album could not be accessed for system reasons.</string>
    <string name="kVcScanPermissionGotoSetting">Please go to the settings interface to allow the app to access the camera.</string>
    <string name="kVcScanPermissionUserRejected">This feature is not supported without camera permissions.</string>
    <string name="kVcScanAlbumClickedTips">Select QR code image</string>
    <string name="kVcScanNaviTitleRightAlbum">Album</string>
    <string name="kVcScanAutoScanTips">Put the QR code inside the border.</string>
    <string name="kVcScanProcessingResult">Processing…</string>
    <string name="kVcScanNoQrCode">No QR code found.</string>
    <string name="kVcScanResultPriKeyTypeTitle">Key type</string>
    <string name="kVcScanResultPriKeyTypeOwner">Owner</string>
    <string name="kVcScanResultPriKeyTypeActive">Active</string>
    <string name="kVcScanResultPriKeyTypeMemo">Memo</string>
    <string name="kVcScanResultPriKeyBtnCreateAndImport">Create wallet &amp; import key</string>
    <string name="kVcScanResultPriKeyBtnImportNow">Import now</string>
    <string name="kVcScanResultAccountBtnTransfer">Transfer</string>
    <string name="kVcScanResultAccountBtnViewDetail">Account details</string>
    <string name="kVcScanResultPayLabelAmount">Amount</string>
    <string name="kVcScanResultPayLabelMemo">Memo</string>
    <string name="kVcScanResultPaySubmitTipsToIsMyself">The payee is the same as the payment account.</string>
    <string name="kVcScanResultPlaceholderInputPayAmount">Please enter the payment amount</string>
    <string name="kVcScanResultPaySubmitTipsInputPayAmount">Please enter the payment amount.</string>
    <string name="kVcScanResultPaySubmitTipsNotEnough">Insufficient balance.</string>
    <string name="kVcScanResultBtnPayNow">Pay now</string>
    <string name="kVcScanResultTipsPaySuccess">Payment completed</string>
    <string name="kVcScanResultPaySuccessLabelTo">Receiver</string>
    <string name="kVcScanResultPaySuccessLabelTrxID">Trx ID</string>
    <string name="kVcScanResultPaySuccessBtnDone">Done</string>
    <string name="kVcSmartPageTitleRank">Rank</string>
    <string name="kVcSmartPageTitleFeed">Feed price</string>
    <string name="kVcRankCurrentFeedPrice">Feed price</string>
    <string name="kVcTipsNoCallOrder">No data</string>
    <string name="kVcRankRatio">Ratio </string>
    <string name="kVcRankCallPrice">Call price</string>
    <string name="kVcRankColl">Collateral</string>
    <string name="kVcRankDebt">Debt</string>
    <string name="kVcRankFlagWillSettlement">settlement soon</string>
    <string name="kVcFeedNoFeedData">No feed price data</string>
    <string name="kVcFeedCurrentFeedPrice">Feed price</string>
    <string name="kVcFeedWitnessName">Witness</string>
    <string name="kVcFeedPublisherCommitteeName">Committee</string>
    <string name="kVcFeedPublisherCustom">Producer</string>
    <string name="kVcFeedPriceName">Price</string>
    <string name="kVcFeedRate">Bias</string>
    <string name="kVcFeedPublishDate">Time</string>
    <string name="kVcFeedNoData">no data</string>
    <string name="kVcFeedExpired">expired</string>
    <string name="kVcFeedNsecAgo">%s secs ago</string>
    <string name="kVcFeedNminAgo">%s mins ago</string>
    <string name="kVcFeedNhourAgo">%s hours ago</string>
    <string name="kVcFeedNDayAgo">%d days ago</string>
    <string name="kVcDWCellLabelCurrGateway">Gateway</string>
    <string name="kVcDWTipsSelectGateway">Please select a gateway</string>
    <string name="kVcDWCellBtnNameDeposit">Deposit</string>
    <string name="kVcDWCellBtnNameWithdraw">Withdraw</string>
    <string name="kVcDWHelpGatewayAssets">Gateway assets(%s)</string>
    <string name="kVcDWTipsCopyOK">Copied</string>
    <string name="kVcDWTipsDisableDeposit">Deposits have been disabled.</string>
    <string name="kVcDWTipsDisableWithdraw">Withdrawls have been disabled.</string>
    <string name="kVcDWTipsGatewayNotAvailable">The current gateway service is not available. please try again later.</string>
    <string name="kVcDWCellBtnCopyAddr">Copy address</string>
    <string name="kLoginPageModePassword">Normal</string>
    <string name="kLoginPageModePrivateKey">Private Key</string>
    <string name="kLoginPageModeWallet">Wallet</string>
    <string name="kLoginTipsPlaceholderAccount">Please input bitshares account</string>
    <string name="kLoginTipsPlaceholderConfirmPassword">Please confirm password</string>
    <string name="kLoginTipsPlaceholderInputRefCode">Referrer code (optional)</string>
    <string name="kLoginCellLabelRefCode">Referrer</string>
    <string name="kLoginBtnRegister">Register</string>
    <string name="kLoginCellBtnAgreeAndReg">Agree &amp; Register</string>
    <string name="kLoginCellAccountName">Account </string>
    <string name="kLoginCellConfirmPassword">Confirm </string>
    <string name="kLoginRegTipsWalletMode">Tip: The password format can be viewed by clicking on the question mark. \nNote: Bitshares is a decentralized blockchain application. If the wallet file or password is lost or forgotten, it is not possible to retrieve it. It is recommended that you back up the wallet file after registration and keep it in a safe place. \n※ Wallet mode is recommended.</string>
    <string name="kVcAssetPageAsset">Assets</string>
    <string name="kVcAssetPageActivity">Activities</string>
    <string name="kVcAssetPageHTLC">HTLC</string>
    <string name="kVcAssetPageVestingBalance">Vesting</string>
    <string name="kVcTitleMyBalance">My balance</string>
    <string name="kVcTitleOtcPmAddBankCard">Add bank card</string>
    <string name="kOtcRmAddPlaceholderRealname">请输入您的姓名</string>
    <string name="kOtcRmAddPlaceholderBankCardNo">请输入银行卡号</string>
    <string name="kOtcRmAddPlaceholderBankPhoneNo">请输入银行预留手机号</string>
    <string name="kOtcRmAddCellLabelTitleName">姓名</string>
    <string name="kOtcRmAddCellLabelTitleBankCardNo">银行卡号</string>
    <string name="kOtcRmAddCellLabelTitleBankPhoneNo">预留手机号</string>
    <string name="kOtcRmAddSubmitBtnName">提交</string>
    <string name="kNormalCellBtnLogin">Login</string>
    <string name="kLoginPassword">Password </string>
    <string name="kBtnBack">Back</string>
    <string name="tip_placeholder_password">Input password</string>
</resources>