<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentRegisterWalletMode">



    <LinearLayout
        android:id="@+id/layout_parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- 账号 -->
        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/kLoginCellAccountName"
                android:textSize="16dp"
                android:textColor="@color/theme01.textColorMain"/>

            <EditText
                android:id="@+id/tf_account_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                style="@style/kTextFieldNormal"
                android:hint="@string/kLoginTipsPlaceholderAccount"/>

            <LinearLayout
                android:gravity="right|center_vertical"
                android:layout_gravity="right"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/tip_account_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tint="@color/theme01.textColorHighlight"
                    android:src="@drawable/icon_tip" />
            </LinearLayout>

        </LinearLayout>

        <!-- 密码 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/kLoginPassword"
                android:textSize="16dp"
                android:textColor="@color/theme01.textColorMain"/>

            <EditText
                android:id="@+id/tf_password"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                style="@style/kTextFieldPassword"
                android:hint="@string/tip_placeholder_password"/>

            <LinearLayout
                android:gravity="right|center_vertical"
                android:layout_gravity="right"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/tip_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tint="@color/theme01.textColorHighlight"
                    android:src="@drawable/icon_tip" />
            </LinearLayout>

        </LinearLayout>

        <!-- 确认密码 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/kLoginCellConfirmPassword"
                android:textSize="16dp"
                android:textColor="@color/theme01.textColorMain"/>

            <EditText
                android:id="@+id/tf_confirm_password"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                style="@style/kTextFieldPassword"
                android:hint="@string/kLoginTipsPlaceholderConfirmPassword"/>

        </LinearLayout>

        <!-- 推荐码 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/kLoginCellLabelRefCode"
                android:textSize="16dp"
                android:textColor="@color/theme01.textColorMain"/>

            <EditText
                android:id="@+id/tf_refcode"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                style="@style/kTextFieldNormal"
                android:hint="@string/kLoginTipsPlaceholderInputRefCode"/>

            <LinearLayout
                android:gravity="right|center_vertical"
                android:layout_gravity="right"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/tip_refcode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center"
                    android:tint="@color/theme01.textColorHighlight"
                    android:src="@drawable/icon_tip" />
            </LinearLayout>

        </LinearLayout>

        <!-- 注册按钮 -->
        <LinearLayout
            android:id="@+id/layout_register_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/colorPrimary"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_register"
                android:layout_width="wrap_content"
                style="@style/kMainButtonStyle"
                android:gravity="center|center_vertical"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/kLoginCellBtnAgreeAndReg" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:singleLine="false"
            android:textSize="12dp"
            android:textColor="@color/theme01.textColorMain"
            android:padding="5dp"
            android:background="@color/theme01.textColorGray"
            android:text="@string/kLoginRegTipsWalletMode" />

    </LinearLayout>


</FrameLayout>