<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme01.appBackColor"
    tools:context=".ActivityLogin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"
        android:padding="10dp"
        android:orientation="vertical">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">


            <LinearLayout
                android:id="@+id/layout_back_from_login"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_btn_back"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/kBtnBack"
                    style="@style/kNavigationBarTextStyle"
                    android:gravity="center_vertical"
                    />
            </LinearLayout>


            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                android:text="@string/kNormalCellBtnLogin"
                style="@style/kNavigationBarTextStyle" />

            <Button
                android:id="@+id/button_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                style="@style/kNavigationBarTextStyle"
                android:background="#00000000"
                android:text="@string/kLoginBtnRegister"
                android:textAllCaps="false"
                android:layout_marginRight="10dp"  />


        </FrameLayout>

        <android.support.design.widget.TabLayout
            android:id="@+id/tablayout_of_login"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:tabTextAppearance="@style/KPageTabTextStyle"
            app:tabIndicatorColor="#ff0000"
            app:tabRippleColor="#aaaaaa"
            app:tabTextColor="#ffffff">

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kLoginPageModePassword" />

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kLoginPageModePrivateKey" />

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kLoginPageModeWallet" />

        </android.support.design.widget.TabLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/view_pager_of_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="48dp">

        </android.support.v4.view.ViewPager>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>