<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme01.appBackColor"
    tools:context="com.btsplusplus.fowallet.ActivityOtcAddBankCard">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="25dp"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/layout_back_from_otc_add_bankcard"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_btn_back"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/kBtnBack"
                    style="@style/kNavigationBarTextStyle"
                    android:gravity="center_vertical"
                    />
            </LinearLayout>


            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                android:text="@string/kVcTitleOtcPmAddBankCard"
                style="@style/kNavigationBarTextStyle" />

        </FrameLayout>


        <LinearLayout
            android:padding="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- 姓名 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kOtcRmAddCellLabelTitleName"
                android:textSize="12dp"
                android:textColor="@color/theme01.textColorMain"/>

            <EditText
                android:id="@+id/tf_realname"
                android:singleLine="true"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="#ffffff"
                android:textColorHint="@color/theme01.textColorGray"
                android:hint="@string/kOtcRmAddPlaceholderRealname"
                android:theme="@style/theme01.EditText"
                android:background="@null"
                android:textSize="16dp"/>

            <View android:layout_marginTop="10dp" android:layout_height="1dp" android:background="@color/theme01.bottomLineColor" android:layout_width="fill_parent"></View>


            <!-- 银行卡号 -->
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kOtcRmAddCellLabelTitleBankCardNo"
                android:textSize="12dp"
                android:textColor="@color/theme01.textColorMain"/>

            <EditText
                android:id="@+id/tf_bankcard_no"
                android:singleLine="true"
                android:maxLines="1"
                android:digits="1234567890"
                android:inputType="phone|number"
                android:maxLength="24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="#ffffff"
                android:textColorHint="@color/theme01.textColorGray"
                android:hint="@string/kOtcRmAddPlaceholderBankCardNo"
                android:theme="@style/theme01.EditText"
                android:background="@null"
                android:textSize="16dp"/>

            <View android:layout_marginTop="10dp" android:layout_height="1dp" android:background="@color/theme01.bottomLineColor" android:layout_width="fill_parent"></View>

            <!-- 预留手机号 -->
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kOtcRmAddCellLabelTitleBankPhoneNo"
                android:textSize="12dp"
                android:textColor="@color/theme01.textColorMain"/>

            <EditText
                android:id="@+id/tf_reserve_phone"
                android:singleLine="true"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="#ffffff"
                android:textColorHint="@color/theme01.textColorGray"
                android:hint="@string/kOtcRmAddPlaceholderBankPhoneNo"
                android:theme="@style/theme01.EditText"
                android:background="@null"
                android:textSize="16dp"/>

            <View android:layout_marginTop="10dp" android:layout_height="1dp" android:background="@color/theme01.bottomLineColor" android:layout_width="fill_parent"></View>

            <!-- 提交按钮 -->
            <TextView
                android:id="@+id/tv_submit_from_otc_add_bankcard"
                android:gravity="center"
                android:background="@color/theme01.sellColor"
                android:layout_marginTop="10dp"
                android:text="@string/kOtcRmAddSubmitBtnName"
                android:textColor="@color/theme01.textColorMain"
                android:textSize="14dp"
                android:layout_width="match_parent"
                android:layout_height="40dp" />



        </LinearLayout>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>
