<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityMyAssets"
    android:background="@color/theme01.appBackColor">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="25dp"
        android:orientation="vertical">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">


            <LinearLayout
                android:id="@+id/layout_back_from_my_assets"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_btn_back"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/kBtnBack"
                    style="@style/kNavigationBarTextStyle"
                    android:gravity="center_vertical"
                    />
            </LinearLayout>


            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                android:text="@string/kVcTitleMyBalance"
                style="@style/kNavigationBarTextStyle" />

            <ImageButton
                android:id="@+id/btn_fav"
                android:paddingRight="10dp"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="right"
                android:layout_weight="1.5"
                android:background="@null"
                android:scaleX="0.8"
                android:scaleY="0.8"
                app:srcCompat="@drawable/ic_btn_star" />

        </FrameLayout>

        <android.support.design.widget.TabLayout
            android:id="@+id/tablayout_of_my_assets"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:tabTextAppearance="@style/KPageTabTextStyle"
            app:tabIndicatorColor="#ff0000"
            app:tabRippleColor="#aaaaaa"
            app:tabTextColor="#ffffff">

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kVcAssetPageAsset" />


            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kVcAssetPageActivity" />

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kVcAssetPageHTLC" />

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kVcAssetPageVestingBalance" />

        </android.support.design.widget.TabLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/view_pager_of_my_assets"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </android.support.v4.view.ViewPager>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>